--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,16 @@
     />
     <script defer src="render.js"></script>
   </head>
-  <body>
+  <body class="content">
     <h1> 📹 Electron screen recoder</h1>
     <video></video>
+    <button id="startBtn" class="button is-primary">Start</button>
+    <button id="stopBtn" class="button is-warning">Stop</button>
+
+    <hr />
+    <button id="videoSelectBtn" class="button is-text">
+      Choose a Video Source
+    </button>
     <p>Welcome to your Electron application.</p>
   </body>
 </html>
