--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script defer src="render.js"></script>
   </head>
   <body class="content">
-    <h1>⚡ Electron Screen Recorder</h1>
+    <h1>⚡ Quicks Screen Recorder</h1>
 
     <video></video>
 
